--- a/css/savs-template_style.css
+++ b/css/savs-template_style.css
@@ -47,6 +47,11 @@ h1, h2, h3, h4, h5, h6, span, p { font-family: 'Open Sans', Arial, Helvetice Neu
     width:100%;
 }
 
+.stuckMenu {
+	position: fixed;
+	top: 0;
+}
+
 .top-menu .navbar-toggle {
     margin-top: 38px;
 }
@@ -63,6 +68,7 @@ h1, h2, h3, h4, h5, h6, span, p { font-family: 'Open Sans', Arial, Helvetice Neu
 
 /* ------ Welcome & Slogna ------ */
 .welcome {
+	margin-top: 252px;
     border-bottom: 1px solid #cccccc;
     min-height: 230px;
 }
