--- a/css/savs-template_style.css
+++ b/css/savs-template_style.css
@@ -66,7 +66,7 @@ h1, h2, h3, h4, h5, h6, span, p { font-family: 'Open Sans', Arial, Helvetice Neu
 }
 
 
-/* ------ Welcome & Slogna ------ */
+/* ------ Welcome & Slogan ------ */
 .welcome {
 	margin-top: 252px;
     border-bottom: 1px solid #cccccc;
@@ -89,7 +89,7 @@ h1, h2, h3, h4, h5, h6, span, p { font-family: 'Open Sans', Arial, Helvetice Neu
 .service-item {
     font-family:  'Open Sans', sans-serif;
     margin-bottom: 10px;
-    font-size: 20px;
+    font-size: 24px;
 }
 
 
@@ -177,7 +177,7 @@ h1, h2, h3, h4, h5, h6, span, p { font-family: 'Open Sans', Arial, Helvetice Neu
 .service-item-header {
     margin-left: -10px; 
     padding: 16px 20px 20px; 
-    font-weight: bold;
+    font-weight:normal
     display: inline-block;
 }
 
@@ -247,32 +247,6 @@ h1, h2, h3, h4, h5, h6, span, p { font-family: 'Open Sans', Arial, Helvetice Neu
 .thumb-overlay a {
     float:left;
     margin-right: 5px;
-}
-
-
-
-.team-inner {
-    margin-top:10px;
-}
-
-.team-inner-header {
-    font-family: 'Open Sans', sans-serif;
-    font-weight:600;
-    font-size:16px;
-}
-
-.team-inner-subtext {
-    font-weight:normal;
-    font-size:12px;
-}
-
-.row_team {
-    margin-left:-50px;
-    margin-top:70px;
-}
-
-.row_team li {
-    list-style: none;
 }
 
 .project-box {
