--- a/css/savs-template_style.css
+++ b/css/savs-template_style.css
@@ -251,6 +251,9 @@ h1, h2, h3, h4, h5, h6, span, p { font-family: 'Open Sans', Arial, Helvetice Neu
 
 .project-box {
     background-size: cover;
+    border-style:solid;
+    border-width: 4px;
+    border-color:#E67E22;
     position: relative;
     overflow: hidden;
     cursor:pointer;
