--- a/css/savs-template_style.css
+++ b/css/savs-template_style.css
@@ -177,6 +177,7 @@ h1, h2, h3, h4, h5, h6, span, p { font-family: 'Open Sans', Arial, Helvetice Neu
 .service-item-header {
     margin-left: -10px; 
     padding: 16px 20px 20px; 
+    font-size:larger;
     font-weight:normal
     display: inline-block;
 }
@@ -650,4 +651,63 @@ ul.project-gallery  li  a img:hover {
 	 .team_hr {
 		width: 11%;
 	}
+}
+
+#social_side_links {
+    position: fixed;
+    top: 100px;
+    left: 0;
+    padding: 10px;
+    background: #555;
+    background: -webkit-gradient(linear, left top, left bottom, from( #555 ), to( #111 ), color-stop( 50%, #444 ), color-stop( 50%, #333 ));
+    background: -webkit-linear-gradient(#555, #444 50%, #333 50%, #111);
+    background: -moz-linear-gradient(#555, #444 50%, #333 50%, #111);
+    background: -ms-linear-gradient(#555, #444 50%, #333 50%, #111);
+    background: -o-linear-gradient(#555, #444 50%, #333 50%, #111);
+    background: linear-gradient(#555, #444 50%, #333 50%, #111);
+    border-width: 2px 2px 2px 0;
+    border-style: solid;
+    border-color: #777 #888 #999;
+    -webkit-border-top-right-radius: 6px;
+    -moz-border-top-right-radius: 6px;
+    border-top-right-radius: 6px;
+    -webkit-border-bottom-right-radius: 6px;
+    -moz-border-bottom-right-radius: 6px;
+    border-bottom-right-radius: 6px;
+    -webkit-box-shadow: #888 7px 0 10px -5px;
+    -moz-box-shadow: #888 7px 0 10px -5px;
+    -o-box-shadow: #888 7px 0 10px -5px;
+    box-shadow: #888 7px 0 10px -5px;
+}
+#social_side_links li a {
+    display: block;
+    background-repeat: no-repeat;
+    background-position: top left;
+}
+#social_side_links li a img {
+    -webkit-transition:  opacity .2s ease-in-out;
+    -moz-transition:  opacity .2s ease-in-out;
+    -o-transition:  opacity .2s ease-in-out;
+    transition:  opacity .2s ease-in-out;
+}
+#social_side_links li a:hover img {
+    opacity: 0;
+}
+#social_side_links li a:active img {
+    opacity: 1;
+}
+#social_side_links li:first-child {
+    background-image: url('images/twitter.png');
+}
+#social_side_links li:nth-child(2) {
+    background-image: url('images/facebook.png');
+}
+#social_side_links li:nth-child(3) {
+    background-image: url('images/linkedin.png');
+}
+#social_side_links li:nth-child(4) {
+    background-image: url('images/digg.png');
+}
+#social_side_links li:nth-child(5) {
+    background-image: url('images/youtube.png');
 }
