--- a/css/savs-template_style.css
+++ b/css/savs-template_style.css
@@ -57,7 +57,7 @@ h1, h2, h3, h4, h5, h6, span, p { font-family: 'Open Sans', Arial, Helvetice Neu
 }
 
 .top-menu .navbar-brand {
-    padding: 5px;
+	padding: 0;
     margin: opx 0 0 0;
 }
 
@@ -65,6 +65,21 @@ h1, h2, h3, h4, h5, h6, span, p { font-family: 'Open Sans', Arial, Helvetice Neu
 	background-color: #AAA;
 }
 
+.navbar .container{
+	height: 150px;
+	
+}
+
+.socialmedia {
+	position: fixed;
+	top: 150px;
+	right: 0;
+	list-style-type: none;
+}
+
+.socialmedia li {
+	padding: 2.5px;
+}
 
 /* ------ Welcome & Slogan ------ */
 .welcome {
@@ -556,6 +571,15 @@ ul.project-gallery  li  a img:hover {
         float:right;
         margin-bottom :40px; 
     }
+	
+	.socialmedia {
+		position: static;
+		list-style: none;
+		padding-left: 0;
+	}
+	.socialmedia li {
+		display: inline-block;
+	}
 }
 
 
