--- a/css/savs-template_style.css
+++ b/css/savs-template_style.css
@@ -306,6 +306,7 @@ h1, h2, h3, h4, h5, h6, span, p { font-family: 'Open Sans', Arial, Helvetice Neu
 
 .project-gallery li {
     margin:15px;
+	display: inline-block;
 }
 
 .txt_darkgrey {
