--- a/css/savs-template_style.css
+++ b/css/savs-template_style.css
@@ -499,6 +499,7 @@ ul.project-gallery  li  a img:hover {
     margin:0 0 0 0;
     margin-top:30px;
     margin-left: -40px;
+	text-align: center;
 }
 .project-gallery li {     
     list-style:none;
