--- a/css/savs-template_style.css
+++ b/css/savs-template_style.css
@@ -176,6 +176,7 @@ h1, h2, h3, h4, h5, h6, span, p { font-family: 'Open Sans', Arial, Helvetice Neu
 .navbar-default {
     background-color:#fff;
     border:none;
+	box-shadow: 0 8px 6px -6px grey;
 }
 
 .navbar-default .navbar-nav > .active > a,
