CSS name changes
Removed team CSS, renamed tweet / twitter CSS to testimonials, moved
testimonials under About US

--- a/css/savs-template_style.css
+++ b/css/savs-template_style.css
@@ -496,7 +496,7 @@ ul.project-gallery  li  a img:hover {
 	cursor: pointer;
 }
 
-.tweets {
+.testimonials {
 	background-color: #8996a0;
 	min-height: 200px;
 	font-family: 'Open Sans', sans-serif;
