--- a/css/savs-template_style.css
+++ b/css/savs-template_style.css
@@ -52,7 +52,7 @@ h1, h2, h3, h4, h5, h6, span, p {
 
 .stuckMenu {
 	position: fixed;
-	top: 0;
+	top: 3px;
 }
 
 .top-menu .navbar-toggle {
@@ -207,8 +207,8 @@ h1, h2, h3, h4, h5, h6, span, p {
 }
 
 .savs_hr_left {
-	margin-right: 30px;
-	margin-left: 15px;
+	margin-right: 20px;
+	margin-left: 20px;
 }
 
 .savs_hr_right {
