--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,6 @@ h1, h2, h3, h4, h5, h6, span, p {
 /* ------ aboutus & Slogan ------ */
 .aboutus {
 	margin-top: 130px;
-	border-bottom: 1px solid #929292;
 	min-height: 230px;
 }
 
@@ -154,7 +153,7 @@ h1, h2, h3, h4, h5, h6, span, p {
 
 .savs_hr {
 	border: 1px solid #ffffff;
-	width: 39.5%;
+	width: 40.0%;
 	float: left;
 }
 
@@ -381,7 +380,8 @@ ul.project-gallery  li  a img:hover {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
 	color: #ffffff;
-	margin-top: 100px;
+	margin-top: 0px;
+	margin-bottom: 30px;
 }
 
 .form-control {
