--- a/css/style.css
+++ b/css/style.css
@@ -509,6 +509,8 @@ ul.project-gallery  li  a img:hover {
 	margin: 0;
 	padding: 0;
 	left: 0px;
+	box-shadow: 0px 3px 5px lightgrey;
+	border: 1px solid lightgrey;
 }
 
 .nav li ul li a {
@@ -521,7 +523,7 @@ ul.project-gallery  li  a img:hover {
 
 #nav-bar ul li:hover > a {
 	text-decoration: none;
-	color: #000;
+	color: #FFF;
 }
 
 #nav-bar ul li:hover {
@@ -548,4 +550,10 @@ ul.project-gallery  li  a img:hover {
 .space {
 	margin-top:20px;
 	
+}
+
+@media (max-width: 350px) {
+	.navbar-brand img {
+		height: 120px;
+	}
 }
