--- a/css/style.css
+++ b/css/style.css
@@ -547,6 +547,10 @@ ul.project-gallery  li  a img:hover {
 	}
 }
 
+.go-left {
+	text-align:left
+}
+
 .space {
 	margin-top:20px;
 	
@@ -554,6 +558,10 @@ ul.project-gallery  li  a img:hover {
 
 @media (max-width: 350px) {
 	.navbar-brand img {
-		height: 110px;
+		height: 80px;
+	}
+	
+	.go-left {
+		text-align: center;
 	}
 }
